--- a/KosaESS/src/main/resources/templates/include/manager_subbar_2.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar_2.html
@@ -9,7 +9,7 @@
 		<div class="logo-details">
 			<i class='bx bxl-c-plus-plus icon'></i>
 			<div class="logo_name">
-				<img class="logo" th:src="@{/img/logo_text.png}">
+				<img class="logo" th:src="@{/img/logo_white.png}">
 			</div>
 			<i class='bx bx-menu' id="btn"><img class="open_icon" th:src="@{/img/open.png}"></i>
 		</div>
