--- a/KosaESS/src/main/resources/templates/manager/subsidy_view.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_view.html
@@ -134,7 +134,7 @@
 						<th>출석일수</th>
 						<th>교육일수</th>
 						<th>출석률(%)</th>
-						<th>지원금(&#8361;)</th>
+						<th>지원금(원)</th>
 						<th>지급기준일</th>
 						<th>지급일</th>
 						<th>기타사항</th>
